[gd_scene load_steps=8 format=3 uid="uid://b16dp41rjjkpr"]

[ext_resource type="Script" uid="uid://dgcfaf2fk8x65" path="res://Scripts/card.gd" id="1_wejov"]
[ext_resource type="Texture2D" uid="uid://c0rvslqmgpohg" path="res://Images/unit_card.png" id="2_xnv4g"]
[ext_resource type="SpriteFrames" uid="uid://e55fuhdcrqmo" path="res://Animations/peasant.tres" id="3_xnv4g"]
[ext_resource type="Texture2D" uid="uid://cjy107yuvngg" path="res://Images/wood.png" id="4_xnv4g"]
[ext_resource type="Texture2D" uid="uid://codod5tgigybh" path="res://Images/heart_icon.png" id="5_pbuqb"]
[ext_resource type="LabelSettings" uid="uid://b2udwgke5epkp" path="res://Label_Settings.tres" id="5_xnv4g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(98, 140)

[node name="Card" type="Node2D"]
script = ExtResource("1_wejov")

[node name="CardImage" type="Sprite2D" parent="."]
texture = ExtResource("2_xnv4g")

[node name="SpriteAnimated" type="AnimatedSprite2D" parent="."]
position = Vector2(-8.34465e-07, 12)
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_xnv4g")
animation = &"idle"
frame_progress = 0.644132

[node name="SpriteImage" type="Sprite2D" parent="."]
position = Vector2(0, 12)
scale = Vector2(3, 3)
texture = ExtResource("4_xnv4g")

[node name="CardLabel" type="Label" parent="."]
offset_left = -41.0
offset_top = -62.0
offset_right = 41.0
offset_bottom = -46.0
text = "Miner"
label_settings = ExtResource("5_xnv4g")
metadata/_edit_use_anchors_ = true

[node name="HealthIcon" type="Sprite2D" parent="."]
position = Vector2(28, -26)
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("5_pbuqb")

[node name="HealthLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = -37.0
offset_right = 41.0
offset_bottom = -15.0
text = "1"
label_settings = ExtResource("5_xnv4g")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ig7tw")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
